Use java 17 stream api