@@ -34,7 +34,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.sql.DataSource;
 import org.locationtech.jts.geom.Geometry;
 import org.postgresql.PGConnection;
@@ -193,7 +192,7 @@ public class PostgresWayRepository implements Repository<Long, Way> {
           Way value = getValue(result);
           values.put(value.getId(), value);
         }
-        return keys.stream().map(values::get).collect(Collectors.toList());
+        return keys.stream().map(values::get).toList();
       }
     } catch (SQLException | JsonProcessingException e) {
       throw new RepositoryException(e);
